--- a/.github/workflows/elixir-build-and-test.yml
+++ b/.github/workflows/elixir-build-and-test.yml
@@ -16,23 +16,8 @@ jobs:
       MIX_ENV: test
     strategy:
       matrix:
-        elixir: ["1.13.4"]
-        otp: ["24.3.4"]
-
-    # Remove if you don't need a database
-    services:
-      db:
-        image: postgis/postgis:13-3.1
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: server_test
-        ports: ["5432:5432"]
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+        elixir: ["1.12.3", "1.13.4", "1.14.3"]
+        otp: ["24.3.4", "25.1.2"]
 
     steps:
       - name: Checkout repository
@@ -45,22 +30,7 @@ jobs:
           otp-version: ${{ matrix.otp }}
           build-flags: --all-warnings --warnings-as-errors
 
-      # Run if you have a database
-      - name: Run Migrations
-        run: mix ecto.migrate
-        # Run tests & migrations even if compilation failed (probably due to warnings)
-        # so that we give devs as much feedback as possible & save some time.
-        if: false
-
       - name: Run Tests
-        run: mix coveralls.json --warnings-as-errors
+        run: mix test --warnings-as-errors
         if: always()
-
-      # Optional, but Codecov has a bot that will comment on your PR with per-file
-      # coverage deltas.
-      - name: Upload to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          files: ./cover/excoveralls.json
 
