--- a/.github/workflows/elixir-build-and-test.yml
+++ b/.github/workflows/elixir-build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         elixir: ["1.12.3", "1.13.4", "1.14.3"]
-        otp: ["24.3.4", "25.1.2"]
+        otp: ["24.3.4"]
 
     steps:
       - name: Checkout repository
